--- a/notebooks/01_paper_results.ipynb
+++ b/notebooks/01_paper_results.ipynb
@@ -1271,6 +1271,80 @@
     "    print(f\"{'='*60}\")\n",
     "    print(df_mcnemar.to_string(index=False))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "acb97a0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>is_tampered</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>scenario_type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bio</th>\n",
+       "      <td>0.613333</td>\n",
+       "      <td>0.8000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cyber</th>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>0.8550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>decision-making</th>\n",
+       "      <td>0.603750</td>\n",
+       "      <td>0.7825</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "is_tampered         False   True \n",
+       "scenario_type                    \n",
+       "bio              0.613333  0.8000\n",
+       "cyber            0.857143  0.8550\n",
+       "decision-making  0.603750  0.7825"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_all_runs['is_tampered'] = df_all_runs['model_name'].apply(lambda x: 'ablit' in x)\n",
+    "df_all_runs.groupby(['scenario_type', 'is_tampered'])['success_rate'].mean().unstack()"
+   ]
   }
  ],
  "metadata": {
